# wallet_live

./: .env.example  .gitignore  Cargo.test.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.sqlx/: query-11ab310953c087422ecabdf70298250e563de9e9be9b96c09d47758679bb5495.json  query-20a53127558e56a7afd089a225984ef063c409e54a23074efc41902e7b64700e.json  query-43e1079553f87ddfc963d2d401e90cd85a700e80f5e044cb594f5cde50f3aab1.json  query-53936ddcab335dcb97e30252e5287f68667b37103d6512469f8c105a62f2ae7b.json  query-595de1c6a03c79b549970782b9b67ac0db6882b4aa127931176b41e3da4382fb.json  query-69f20c7a26209173af7191b22528e6264c20ecf9b267001de8c41e6eddfe4588.json  query-8bcd8d9834b46e12c050bcf8a89affcdeb35dba5aae43c71cedeb4a4d3dfb433.json  query-dc96e99fec6f46e249c144b17d51024d2a9ae702a2152a84cdd42bc6e2e7e9ca.json  query-f2accdbfd1a88fcba7828afd6c0b72f122b937cd3858617245731d692ef925c2.json
http/: test.http
migrations/: 20260717235644_create_assets.up.sql  20260720175848_owned_assets.up.sql  20260721181719_admins.down.sql  20260721181719_admins.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository.rs
src/auth/: admin.rs
src/models/: asset.rs  mod.rs  owned_assets.rs  user.rs
src/routes/: api.rs  frontend.rs
src/routes/api/: admin.rs  assets.rs
src/routes/api/snapshots/: wallet_live__routes__api__assets__tests__create_asset.snap  (+2 more)
src/routes/fixtures/: bitcoin_asset.sql
src/routes/frontend/: assets.rs  login.rs  logout.rs
src/routes/snapshots/: wallet_live__routes__api__tests__create_asset.snap  wallet_live__routes__api__tests__list_assets.snap  wallet_live__routes__api__tests__update_asset.snap
templates/: assets.html  login.html
