[package]
name = "wallet_live"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
thiserror = "2.0.18"
sqlx = { version = "0.9.0", features = ["macros", "postgres", "runtime-tokio"] }
dotenvy = "0.15.7"

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }

[package.metadata.bin]
sqlx-cli = { version = "0.9.0", features = ["postgres"], bins = ["sqlx"] }
cargo-insta = { version = "1.48.0" }

[alias]
insta = ["bin", "cargo-insta"]